<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.bolek.rcdroid.MainActivity">


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_left"
        android:orderInCategory="100"
        android:title="@string/action_left"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_right"
        android:orderInCategory="100"
        android:title="@string/action_right"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_move_l"
        android:orderInCategory="100"
        android:title="@string/action_move_l"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_move_r"
        android:orderInCategory="100"
        android:title="@string/action_move_r"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cross"
        android:orderInCategory="100"
        android:title="@string/action_cross"
        app:showAsAction="never"/>
</menu>
